--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -19,6 +19,12 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+.images {
+    display: block;
+    min-width: 100%;
+    height: auto;
+}
+
 address {
     font-style: normal;
 }
