--- a/scss/components/_format-card.scss
+++ b/scss/components/_format-card.scss
@@ -10,25 +10,37 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    transition: transform 0.5s;
     line-height: 1;
+
+    
+    &__title {
+        color: var(--color-brand-primary-light);
+        font-size: 24px;
+        font-weight: 600;
+    }
+    
+    &__description {
+        position: absolute;
+        bottom: 100;
+        // left: 0;
+        // right: 0;
+        color: var(--color-brand-primary-light);
+        position: relative;
+        font-size: 16px;
+        font-weight: 300;
+    }
+    
+    &__image {
+        position: absolute;
+        border-radius: 16px;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: -1;
+        object-fit: cover;
+    }
 }
 
-.format-card:hover {
-     transform: scale(1.05);
-}
-
-.format-image {
-    position: absolute;
-    border-radius: 16px;
-    width: 100%;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    z-index: -1;
-}
-
-.formats-item {
-    flex-basis: calc(100% - 40px) / 3;
-}
