--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -1,20 +1,31 @@
 .chefs-section {
   position: relative;
   padding: 48px 0;
+  padding-top: 0;
 
   &__title {
-    position: relative;
+    font-size: 32px;
     text-align: center;
+
+@media screen and (min-width: $bp-desktop) {
+    position: relative;
+    font-size: 64px;
+    padding-top: 48px;
     margin: 0 auto 80px;
+}    
 
     &::before,
     &::after {
+      display: none;
+
+@media screen and (min-width: $bp-desktop) {
       position: absolute;
       width: 352px;
       bottom: 24px;
       display: block;
       border: 2px solid var(--color-brand-light);
       content: '';
+}      
     }
 
     &::before {
@@ -24,20 +35,39 @@
     &::after {
       right: 0;
     }
-    
-    
   } // ← 🔹 здесь обязательно закрываем &__title!
 
   &__item {
     display: flex;
-    flex-basis: 629px; 
+    flex-basis: 330px, 230px; 
+    margin-bottom: 16px;
+
+@media screen and (min-width: $bp-tablet) {
+      flex-basis: 400px; 
+    }       
+   
+@media screen and (min-width: $bp-desktop) {
+  flex-basis: 629px; 
+}    
   }
 
   &__list {
     display: flex;
+    flex-direction: column;
+    margin: 24px 20px 0px 10px;
+ // flex-wrap: nowrap;
+
+ @media screen and (min-width: $bp-tablet) {
+    flex-direction: row;
+ }
+
+@media screen and (min-width: $bp-desktop) {
+    display: flex;
+    flex-direction: row;
     gap: 40px;
     justify-content: space-between;
-    // flex-wrap: nowrap;
+    }
+    
    }
 
 }
