--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -1,4 +1,7 @@
 .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: absolute;
     top: 0;
     left: 0;
@@ -18,10 +21,43 @@
     gap: 40px;
     }
 
-&__menu {
-    display: flex;
-    justify-content: space-around;
-    flex-grow: 1;
+&__logo {
+    padding: 20px 20px;
+
+    @media screen and (min-width:$bp-desktop) {
+        padding: 16px 20px;
     }
+ }  
+
+&__menu {
+    display: none;
+    
+    @media screen and (min-width: $bp-desktop) {
+        display: flex;
+        justify-content: space-around;
+        flex-grow: 1;
+    }
+}
+
+&__button {
+    display: none;
+
+    @media screen  and (min-width: $bp-desktop) {
+        display: block;
+    }
+}
+
+&__burger { 
+    fill: var(--color-brand-primary-light);
+    background-color: transparent;
+    width: 30; 
+    height:30;
+    border: none;
+
+
+    @media screen and (min-width: $bp-desktop) {
+        display: none;
+    }
+  }
 }
 
