--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,3 @@
-// fonts
 @import './utils/_variables.scss';
 @import './_base.scss';
 @import './utils/_utils.scss';
@@ -7,6 +6,7 @@
 @import './components/_buttons.scss';
 @import './components/_links.scss';
 @import './layouts/_forms.scss';
+@import './layouts/_mobile-menu.scss';
 
 /* Section */
 
